# snowflake-auto-deploy

./: .pdm.toml  Dockerfile  action.yml  main.py  pyproject.toml  snowflake_connector.py  utils.py
.github/workflows/: publish-docker-image.yml  sanity.yml
__pypackages__/: .gitignore
