[project]
name = "snowflake-auto-deploy"
version = "0.1.0"
description = "Automaticlly deploy to snowflake using GitHub Action"
authors = [
    {name = "Vincent Yan", email = "vincent.yan@blend360.com"},
]
dependencies = [
    "python-dotenv>=0.20.0",
    "snowflake-connector-python==2.7.6",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
